# cpp-module-print-bug

./: CMakeLists.txt  main.cpp  module_that_prints.ixx
